Sprint9/module tests (#4)
* тест регистрации пользвоателя
* тест логин endpoint по email или phone
* поменял на прфоили
* selenium тесты  
* тесты  logout
* тесты коризны куки